--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A list of resources for engineering managers (Books, Videos, Podcasts, Articles)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "build": "node index"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,19 @@
   "bugs": {
     "url": "https://github.com/ryanburgess/engineer-manager/issues"
   },
-  "homepage": "https://github.com/ryanburgess/engineer-manager#readme"
+  "config": {
+    "ghooks": {
+      "pre-commit": "gulp test",
+      "pre-push": "node index",
+      "post-merge": "npm install",
+      "post-rewrite": "npm install"
+    }
+  },
+  "homepage": "https://github.com/ryanburgess/engineer-manager#readme",
+  "devDependencies": {
+    "ghooks": "^1.3.2",
+    "gulp": "^3.9.1",
+    "gulp-jsonlint": "^1.1.2",
+    "jshint-stylish": "^2.2.1"
+  }
 }
