--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ghooks": "^1.3.2",
     "gulp": "^3.9.1",
     "gulp-jsonlint": "^1.1.2",
-    "jshint-stylish": "^2.2.1"
+    "jshint-stylish": "^2.2.1",
+    "prompt": "^1.0.0"
   }
 }
