--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "gulp test",
+      "pre-commit": "",
       "pre-push": "node index",
       "post-merge": "npm install",
       "post-rewrite": "npm install"
