--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
   "homepage": "https://github.com/ryanburgess/engineer-manager#readme",
   "devDependencies": {
     "ghooks": "^1.3.2",
-    "gulp": "^3.9.1",
-    "gulp-jsonlint": "^1.1.2",
+    "gulp": "^4.0.2",
+    "gulp-jsonlint": "^1.3.2",
     "jshint-stylish": "^2.2.1",
-    "prompt": "^1.0.0"
+    "node-sass": "^6.0.1",
+    "prompt": "^1.1.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
